--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="css/leaflet.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
-        <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
         <style>
         html, body, #map {
             width: 100%;
@@ -22,6 +22,9 @@
     <body>
         <div id="map">
         </div>
+
+
+
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
@@ -31,7 +34,7 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
+        <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
         <script src="data/Parcels_1.js"></script>
         <script>
         var highlightLayer;
@@ -50,7 +53,7 @@
             }
         }
         var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:1
+            zoomControl:true, maxZoom:18, minZoom:1
         })
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://willcountyillinois.com/gis" target="_blank">Will County GIS</a>&middot; <a href="https://github.com/UnderJollyRoger" target="_blank">PilbeaMaps</a> &middot; <a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
@@ -393,10 +396,15 @@
             };
             title.addTo(map);
         var osmGeocoder = new L.Control.Geocoder({
-            collapsed: true,
-            position: 'topleft',
-            text: 'Search',
-            title: 'Testing'
+            position: 'topright',
+    collapsed: false,
+    placeholder: 'Search...',
+    defaultMarkGeocode: true,
+    geocoder: L.Control.Geocoder.mapbox('pk.eyJ1IjoiamVua2tpIiwiYSI6ImNrYXp4dXZhYzAzMWkyem54ZnM5cGdnY3AifQ.Cns_W8Pz6zeTSXgby-uvTg', {
+      geocodingQueryParams: {
+        country: 'us'
+      }
+    })
         }).addTo(map);
         document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
         .className += ' fa fa-search';
